# PIRE

./: .env.example  .gitignore  Dockerfile  PIRE-design-notes-2026-05-01.md  PIRE-openclaw-skill-draft.md  PIRE-v1-spec.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: entrypoint.sh
docs/: WORKING-SUMMARY.md  api-question-rendering-conventions.md  cli-notes.md  container-notes.md  prompting-strategy.md  runtime-repo-structure.md  skill-notes.md
docs/screenshots/: README.md
examples/: README-EXAMPLES.md
scripts/: capinfos_inventory.sh
skills/pire-openclaw/: SKILL.md
skills/pire-openclaw/references/: prompt-contract.md
src/pire/: cli.py  core.py  openclaw.py  runtime.py  web.py
src/pire/static/: app.js  index.html  styles.css
templates/: README-TEMPLATES.md  current-case-template.md  experiential-note-template.md
tests/: dialog-simulation-2026-05-02.md
