[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pire"
version = "0.1.0"
description = "PCAP Ingest, Read & Evaluate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
  "orjson>=3.10,<4.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0"
]

[project.scripts]
pire = "pire.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
pire = ["static/*"]

[tool.setuptools.packages.find]
where = ["src"]
